Added prediction bias analysis.

--- a/Naive Bayes Classifier.ipynb
+++ b/Naive Bayes Classifier.ipynb
@@ -7,12 +7,16 @@
    "source": [
     "# Naive Bayes Classifier for spam email\n",
     "\n",
-    "https://www.kaggle.com/datasets/jackksoncsie/spam-email-dataset/"
+    "https://www.kaggle.com/datasets/jackksoncsie/spam-email-dataset/\n",
+    "\n",
+    "A classic supervised learning task, spam identification, is presented here with a dataset containing emails defined as spam or not spam.  \n",
+    "We implement a Naive Bayes classifier using Scikit Learn to construct a model which accurately identifies unseen email as spam or not.\n",
+    "We obtain a model that is unbiased, efficient, and 99% accurate. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 2,
    "id": "4aded6a1-5707-463b-81c9-c85bfb70e084",
    "metadata": {},
    "outputs": [],
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 3,
    "id": "b678c17c-64b0-47e4-b2d6-04e572bb3f18",
    "metadata": {},
    "outputs": [
@@ -57,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 4,
    "id": "db28cad3-65e7-4f8e-aa3e-3ced6b37830c",
    "metadata": {},
    "outputs": [
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 5,
    "id": "c19ae816-15f4-4a71-850b-19f4413be34a",
    "metadata": {},
    "outputs": [
@@ -119,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 6,
    "id": "e1547c72-0acb-4666-9071-752a092bbcc0",
    "metadata": {},
    "outputs": [
@@ -196,7 +200,7 @@
        "max       1.000000"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 7,
    "id": "819ef587-5ccd-4e26-bbb9-eafee5952f44",
    "metadata": {},
    "outputs": [
@@ -219,7 +223,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 8,
    "id": "2518b911-03fc-472e-952f-2779d00b8755",
    "metadata": {},
    "outputs": [],
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "id": "8df2732a-32c4-40f9-a80e-ccba1374ddef",
    "metadata": {},
    "outputs": [
@@ -254,13 +258,14 @@
        "((4296, 32973), (1432, 32973))"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "vectorizer = CountVectorizer(stop_words='english')\n",
+    "\n",
     "#get document term matrix DTM\n",
     "X_train_dtm = vectorizer.fit_transform(X_train);\n",
     "X_test_dtm = vectorizer.transform(X_test);  #only transform on unseen test data\n",
@@ -278,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 10,
    "id": "3345b5f3-f8b3-4ee3-adc4-2627782e8a9a",
    "metadata": {},
    "outputs": [],
@@ -298,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 11,
    "id": "aa7ca505-67fd-473c-9a12-07ccb2aec8c5",
    "metadata": {},
    "outputs": [
@@ -325,7 +330,7 @@
        "0.9909217877094972"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 12,
    "id": "5bb01238-05c9-4d92-be0c-feb9b890f14d",
    "metadata": {},
    "outputs": [
@@ -517,7 +522,7 @@
        "5128  Subject: fw : london work  hi ,  how are you ?...     0     0"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 13,
    "id": "c030e660-ccf0-4271-9b61-7a99d6be8dde",
    "metadata": {},
    "outputs": [
@@ -560,7 +565,7 @@
        "array([0, 1, 1, 1, 1, 0])"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 14,
    "id": "1a48d273-0b6e-485b-abb2-31e7059bd68e",
    "metadata": {},
    "outputs": [
@@ -611,6 +616,37 @@
     "plt.legend(loc='lower right')\n",
     "plt.grid()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "e52c6dbf-5b11-4c53-93f1-bcd0771cd347",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction Bias:\n",
+      "Mean ground truth label: 0.2388268156424581\n",
+      "Mean model prediction:   0.24231843575418993\n",
+      "Prediction bias:         1.46%\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Evaluate Prediction Bias\n",
+    "#Prediction bias is the difference between the average prediction of the model and the average ground truth label in the data.\n",
+    "\n",
+    "#\n",
+    "pb_label = y_train.mean()\n",
+    "pb_model = y_pred.mean()\n",
+    "prediction_bias_pct = (pb_model/pb_label)-1\n",
+    "print(\"Prediction Bias:\")\n",
+    "print(f\"Mean ground truth label: {pb_label}\")\n",
+    "print(f\"Mean model prediction:   {pb_model}\")\n",
+    "print(f\"Prediction bias:         {prediction_bias_pct:.2%}\")\n"
    ]
   }
  ],
